@@ -80,6 +80,7 @@
      * Fix print fail from a unchecked print buffer underflow
      * Report mesh bed leveling data
      * Use the print mode to report the right print stats row to connect
+     * Make sure fan errors send reason, improve their behavior a little
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
